--- a/src/views/FormCadastro/FormCadastro.css
+++ b/src/views/FormCadastro/FormCadastro.css
@@ -28,3 +28,15 @@
 .botoes {
     width: 40%;
 }
+
+.require:after {
+    content: 'Preenchimento obrigatório!';
+    font-family: sans-serif;
+    font-size: 12px;
+    color: red;
+    position: absolute;
+    bottom: -30%;
+    transform: scaleX(1);
+    width: 100%;
+    border-top: 2px solid #f44336 !important;
+}
