--- a/src/components/Cabecalho/Cabecalho.css
+++ b/src/components/Cabecalho/Cabecalho.css
@@ -10,4 +10,28 @@
     font-size: 2.5rem !important;
     margin: 0.5rem 0 0 0.5rem;
     color: black;
+    transition: all .5s ease-in-out;
+}
+
+.icone-voltar:hover {
+    transition: all .5s ease-in-out;
+    animation: wiggle 1s infinite;
+}
+
+@keyframes wiggle {
+    10%, 90% {
+        transform: translate3d(-1px, 0, 0);
+    }
+
+    20%, 80% {
+        transform: translate3d(1px, 0, 0);
+    }
+
+    30%, 50%, 70% {
+        transform: translate3d(-2px, 0, 0);
+    }
+
+    40%, 60% {
+        transform: translate3d(2px, 0, 0);
+    }
 }
